chore: chane link

--- a/resume_english.tex
+++ b/resume_english.tex
@@ -134,7 +134,7 @@ Made it a habit to confirm specifications and UI with PMs/designers in advance t
 
 \vspace{0.15em}
 
-\noindent Role: Frontend development of {\link{https://moneykit.net/}{internet banking}}
+\noindent Role: Frontend development of {\link{https://moneykit.net/en}{internet banking}}
 
 \begin{itemize}[leftmargin=1em]
 
