chore: update resume_english.md

--- a/resume_english.tex
+++ b/resume_english.tex
@@ -39,11 +39,8 @@ Highly skilled professional with over 5 years of experience in software developm
 \noindent\rule{\textwidth}{0.1pt}
 
 \noindent
-\textbf{Languages:} Typescript, Go \textbar\
-\textbf{Frameworks:} React, Node \textbar\
-\textbf{Developer Tools:} Git, Docker, Google Cloud, Figma, Slack, Jira, Sentry
+HTML, CSS, Typescript, Go, Node.js, Express.js, APIs, React, Redux, Next.js, React-Router, Chakra-UI, Material-UI, Storybook, Jest, Vitest, Unit testing, GraphQL, REST, PostgreSQL, MySQL, Git, CI/CD, Docker, Google Cloud Platform, Figma, Jira, Debugging, SEO
 \noindent
-\textbf{Libraries:} Next.js, React-Router, Chakra-UI, Material-UI, Storybook, Jest, Vitest, Redux, Graphql, Postgres, MySQL
 
 \vspace{1em}
 
@@ -52,12 +49,15 @@ Highly skilled professional with over 5 years of experience in software developm
 \noindent\rule{\textwidth}{0.1pt}
 \vspace{0.3em}
 
-\jobentry{\link{https://sorajima.jp/en}{SORAJIMA  Inc.} | Fullstack Developer}{May 2024 - Present | Tokyo, Japan (Remote)}
+\jobentry{\link{https://sorajima.jp/en}{SORAJIMA  Inc.} | Full-Stack Developer}{May 2024 - Present | Tokyo, Japan (Remote)}
 \begin{itemize}
-  \item Improved Lighthouse performance score from 35\% to 75\% and enhanced UX with optimistic UI across multiple projects
+  \item Improved Lighthouse performance score from 35\% to 75\%
+  \item Improved Lighthouse SEO score from 60\% to 80\% by implementing meta tags and Open Graph tags
+  \item Improved Lighthouse accessibility score from 70\% to 90\% by using semantic HTML
+  \item Enhanced UX with optimistic UI
   \item Enabled flexible UI composition by redesigning components using \link{https://kentcdodds.com/blog/compound-components-with-react-hooks}{the Compound Component pattern}
   \item Supported backend developers by adding, updating, and fixing APIs
-  \item Identified and fixed a critical bug preventing users from login that had stumped the team
+  \item Identified and fixed \link{https://github.com/chakra-ui/chakra-ui/issues/7449}{a critical bug} preventing users from login that had stumped the team
   \item Logged network requests over 1 second latency in Sentry, which led to significant performance improvements
   \item Regularly updated libraries to the latest versions to avoid potential vulnerabilities
   \item Reduced bundle size and improved security by replacing Client Components with Server Components
@@ -66,7 +66,7 @@ Highly skilled professional with over 5 years of experience in software developm
 
 \vspace{1em}
 
-\jobentry{\link{https://buysell-technologies.com/en/}{BuySell Technologies Co., Ltd.} | Fullstack Developer}{Feb 2023 - Dec 2023 | Tokyo, Japan (Remote)}
+\jobentry{\link{https://buysell-technologies.com/en/}{BuySell Technologies Co., Ltd.} | Full-Stack Developer}{Feb 2023 - Dec 2023 | Tokyo, Japan (Remote)}
 \begin{itemize}
   \item Reevaluated date libraries choice and migrated from Day.js to date-fns due to \link{https://github.com/iamkun/dayjs/issues/1236}{an issue} with Day.js
   \item Improved component readability and maintainability by splitting a component with logical cohesion
