chore: update resume_english.tex

--- a/resume_english.tex
+++ b/resume_english.tex
@@ -70,6 +70,7 @@ HTML, CSS, Typescript, Go, Node.js, Express.js, APIs, React, Redux, Next.js, Rea
 \begin{itemize}
   \item Reevaluated date libraries choice and migrated from Day.js to date-fns due to \link{https://github.com/iamkun/dayjs/issues/1236}{an issue} with Day.js
   \item Improved component readability and maintainability by splitting a component with logical cohesion
+  \item Improved development speed by building reusable components and releasing them as an npm package with Turborepo
   \item Mentored junior developers through daily guidance, training, code reviews, and performance feedback
   \item Reduced communication overhead with backend developers by implementing APIs and tests on time
 \end{itemize}
