chore: update resume_english.md

--- a/resume_english.tex
+++ b/resume_english.tex
@@ -30,7 +30,7 @@
 \vspace{-1em}
 \noindent\rule{\textwidth}{0.1pt}
 \noindent
-Highly skilled professional with over 5 years of experience in software development, specializing in Typescript, React, and Next.js. Adept at creating robust, scalable web applications, with a proven ability to deliver high-quality, user-centric solutions. Strong interest in maintainability of source codes and design patterns.
+Highly skilled professional with over 5 years of experience in software development, specializing in Typescript, React. Adept at creating robust, scalable web applications, with a proven ability to deliver high-quality, user-centric solutions. Strong interest in maintainability of source codes and design patterns.
 
 \vspace{1em}
 
@@ -39,7 +39,7 @@ Highly skilled professional with over 5 years of experience in software developm
 \noindent\rule{\textwidth}{0.1pt}
 
 \noindent
-HTML, CSS, Typescript, Go, Node.js, Express.js, APIs, React, Redux, Next.js, React-Router, Chakra-UI, Material-UI, Storybook, Jest, Vitest, Unit testing, GraphQL, REST, PostgreSQL, MySQL, Git, CI/CD, Docker, Google Cloud Platform, Figma, Jira, Debugging, SEO
+HTML, CSS, Typescript, Go, Node.js, Express.js, APIs, React, Remix, React-Router, Next.js, React-Testing-Library, Chakra-UI, Material-UI, Storybook, Jest, Vitest, Unit-Testing, GraphQL, Apollo-Client, URQL, REST, PostgreSQL, MySQL, Git, CI/CD, Docker, Google Cloud Platform, Figma, Jira, Debugging, SEO
 \noindent
 
 \vspace{1em}
@@ -71,7 +71,7 @@ HTML, CSS, Typescript, Go, Node.js, Express.js, APIs, React, Redux, Next.js, Rea
   \item Reevaluated date libraries choice and migrated from Day.js to date-fns due to \link{https://github.com/iamkun/dayjs/issues/1236}{an issue} with Day.js
   \item Improved component readability and maintainability by splitting a component with logical cohesion
   \item Improved development speed by building reusable components and releasing them as an npm package with Turborepo
-  \item Mentored junior developers through daily guidance, training, code reviews, and performance feedback
+  \item Filled in for the tech lead by reviewing code and supporting developers while they handled project management duties
   \item Reduced communication overhead with backend developers by implementing APIs and tests on time
 \end{itemize}
 
