--- a/resume_english.tex
+++ b/resume_english.tex
@@ -62,6 +62,7 @@ HTML, CSS, Typescript, Go, Node.js, Express.js, APIs, React, Remix, React-Router
   \item Regularly updated libraries to the latest versions to avoid potential vulnerabilities
   \item Reduced bundle size and improved security by replacing Client Components with Server Components
   \item Bootstrapped a new frontend project by setting up CI, linters, and code generation tools
+  \item Investigated and fixed a critical login bug that caused a surge in user support inquiries and disrupted the user experience
 \end{itemize}
 
 \vspace{1em}
@@ -73,6 +74,7 @@ HTML, CSS, Typescript, Go, Node.js, Express.js, APIs, React, Remix, React-Router
   \item Improved development speed by building reusable components and releasing them as an npm package with Turborepo
   \item Filled in for the tech lead by reviewing code and supporting developers while they handled project management duties
   \item Reduced communication overhead with backend developers by implementing APIs and tests on time
+  \item Mentored junior frontend developers through code reviews and technical guidance
 \end{itemize}
 
 
