--- a/resume_english.tex
+++ b/resume_english.tex
@@ -72,8 +72,9 @@ HTML, CSS, Typescript, Go, Node.js, Express.js, APIs, React, Remix, React-Router
   \item Improved component readability and maintainability by splitting a component with logical cohesion
   \item Improved development speed by building reusable components and releasing them as an npm package with Turborepo
   \item Filled in for the tech lead by reviewing code and supporting developers while they handled project management duties
-  \item Reduced communication overhead with backend developers by implementing APIs and tests on time
   \item Mentored junior frontend developers through code reviews and technical guidance
+  \item Performed a vulnerability assessment using OWASP tools; no issues were detected
+  \item Reduced communication overhead with backend developers by implementing APIs and tests on time
 \end{itemize}
 
 
