--- a/resume_english.tex
+++ b/resume_english.tex
@@ -39,7 +39,7 @@ Highly skilled professional with over 5 years of experience in software developm
 \noindent\rule{\textwidth}{0.1pt}
 
 \noindent
-HTML, CSS, Typescript, Go, Node.js, Express.js, APIs, React, Remix, React-Router, Next.js, React-Testing-Library, Chakra-UI, Material-UI, Storybook, Jest, Vitest, Unit-Testing, GraphQL, Apollo-Client, URQL, REST, PostgreSQL, MySQL, Git, CI/CD, Docker, Google Cloud Platform, Figma, Jira, Debugging, SEO
+HTML, CSS, Typescript, Go, Node.js, Express.js, APIs, React, Remix, React-Router, Next.js, React-Testing-Library, Chakra-UI, MUI, Storybook, Jest, Vitest, Unit-Testing, GraphQL, Apollo-Client, URQL, REST, PostgreSQL, MySQL, Git, CI/CD, Docker, Google Cloud Platform, Figma, Jira, Debugging, SEO
 \noindent
 
 \vspace{1em}
