--- a/resume_english.tex
+++ b/resume_english.tex
@@ -56,11 +56,13 @@ HTML, CSS, Typescript, Go, Node.js, Express.js, APIs, React, Remix, React-Router
   \item Improved Lighthouse accessibility score from 70\% to 90\% by using semantic HTML
   \item Enhanced UX with optimistic UI
   \item Enabled flexible UI composition by redesigning components using \link{https://kentcdodds.com/blog/compound-components-with-react-hooks}{the Compound Component pattern}
+  \item Enhanced code readability by replacing if statements using \link{https://dev.to/maissenayed/conditional-react-props-with-typescript-43lg}{Conditional React props with TypeScript}
   \item Supported backend developers by adding, updating, and fixing APIs
   \item Identified and fixed \link{https://github.com/chakra-ui/chakra-ui/issues/7449}{a critical bug} preventing users from login that had stumped the team
   \item Logged network requests over 1 second latency in Sentry, which led to significant performance improvements
   \item Regularly updated libraries to the latest versions to avoid potential vulnerabilities
   \item Reduced bundle size and improved security by replacing Client Components with Server Components
+  \item Supported backend developers by adding, updating, and fixing APIs
   \item Bootstrapped a new frontend project by setting up CI, linters, and code generation tools
 \end{itemize}
 
@@ -76,7 +78,6 @@ HTML, CSS, Typescript, Go, Node.js, Express.js, APIs, React, Remix, React-Router
   \item Performed a vulnerability assessment using OWASP tools; no issues were detected
   \item Reduced communication overhead with backend developers by implementing APIs and tests on time
 \end{itemize}
-
 
 \vspace{1em}
 
